--- a/back-end/pyproject.toml
+++ b/back-end/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 sqlmodel = "^0.0.14"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
