--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = database,db_models,dotenv,pytest,sqlmodel
+known_third_party = database,db_models,dotenv,pytest,soundfile,sqlmodel
